--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <img src="img/banner/Background.jpg" alt="">
                             <div class="opening_hour text-center">
                                 <i class="flaticon-clock"></i>
-                                <h3>Orario d'apertura</h3>
+                                <h3>Orario <br>d'apertura</h3>
                                 <p style="color: black;font-weight:bold">Mar-Sab (8.00-19.30)</p>
                                 <!--something after br -->
                         </div>
