--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                         <div class="gallery_active owl-carousel">
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/28616737_2050762784939554_320243070205565239_o.jpg" alt="">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus tempora vero nihil, voluptas impedit fugiat ex non velit cupiditate, voluptatum delectus eligendi omnis reprehenderit aperiam? Quo harum fugiat tempore.</p>
+                                    <img src="img/gallery/acconciatura sposa.jpg" alt="">
+                                    <p>Acconciatura sposa</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/gallery/28616737_2050762784939554_320243070205565239_o.jpg">
+                                            href="img/gallery/acconciatura sposa.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
@@ -255,11 +255,11 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/28872084_2054719457877220_2031935581941600104_n.jpg" alt="">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus tempora vero nihil, voluptas impedit fugiat ex non velit cupiditate, voluptatum delectus eligendi omnis reprehenderit aperiam? Quo harum fugiat tempore.</p>
+                                    <img src="img/gallery/biondo caldo.jpg" alt="">
+                                    <p>Biondo caldo</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/gallery/28872084_2054719457877220_2031935581941600104_n.jpg">
+                                            href="img/gallery/biondo caldo.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
@@ -267,11 +267,11 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/28947270_2062361960446303_418535579025903849_o.jpg" alt="">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus tempora vero nihil, voluptas impedit fugiat ex non velit cupiditate, voluptatum delectus eligendi omnis reprehenderit aperiam? Quo harum fugiat tempore.</p>
+                                    <img src="img/gallery/pastello.jpg" alt="">
+                                    <p>Pastello</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/gallery/28947270_2062361960446303_418535579025903849_o.jpg">
+                                            href="img/gallery/pastello.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
