--- a/index.html
+++ b/index.html
@@ -255,6 +255,28 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
+                                    <img src="img/gallery/light blonde.jpg" alt="">
+                                    <p>Light Blonde</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/light blonde.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/velature bionde.jpg" alt="">
+                                    <p>Velature bionde</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/velature bionde.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
                                     <img src="img/gallery/biondo caldo.jpg" alt="">
                                     <p>Biondo caldo</p>
                                     <div class="image_hover">
@@ -279,11 +301,11 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/62105187_2754154134600412_7710989442047016960_n.jpg" alt="">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus tempora vero nihil, voluptas impedit fugiat ex non velit cupiditate, voluptatum delectus eligendi omnis reprehenderit aperiam? Quo harum fugiat tempore.</p>
+                                    <img src="img/gallery/platino.jpg" alt="">
+                                    <p>Platino</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/gallery/62105187_2754154134600412_7710989442047016960_n.jpg">
+                                            href="img/gallery/platino.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
@@ -291,11 +313,11 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/78215387_3143960372286451_4518699980763955200_o.jpg" alt="">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus tempora vero nihil, voluptas impedit fugiat ex non velit cupiditate, voluptatum delectus eligendi omnis reprehenderit aperiam? Quo harum fugiat tempore.</p>
+                                    <img src="img/gallery/cioccolato.jpg" alt="">
+                                    <p>Cioccolato</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/gallery/78215387_3143960372286451_4518699980763955200_o.jpg">
+                                            href="img/gallery/cioccolato.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
@@ -303,9 +325,110 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="#" alt="">
+                                    <img src="img/gallery/gianduia.jpg" alt="">
+                                    <p>Gianduia</p>
                                     <div class="image_hover">
-                                        <a class="popup-image" href="#">
+                                        <a class="popup-image"
+                                            href="img/gallery/gianduia.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/red.jpg" alt="">
+                                    <p>Red</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/red.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/bob.jpg" alt="">
+                                    <p>Bob</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/bob.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/contrasti.jpg" alt="">
+                                    <p>Contrasti</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/contrasti.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/sfumando.jpg" alt="">
+                                    <p>Sfumando</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/sfumando.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/stravaganze.jpg" alt="">
+                                    <p>Stravaganze</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/stravaganze.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/stravaganze2.jpg" alt="">
+                                    <p>Stravaganze</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/stravaganze2.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/semi raccolto.jpg" alt="">
+                                    <p>Semi raccolto</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/semi raccolto.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/waves.jpg" alt="">
+                                    <p>Waves</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/waves.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/gallery/waves2.jpg" alt="">
+                                    <p>Waves</p>
+                                    <div class="image_hover">
+                                        <a class="popup-image" href="img/gallery/waves2.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
