--- a/index.html
+++ b/index.html
@@ -458,52 +458,68 @@
                         <div class="gallery_active owl-carousel">
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/Products/42680679_2344349902247506_8511031842294464512_o.jpg" alt="">
+                                    <img src="img/Products/Linea  Shampoo luminescina Haircompany.jpg" alt="">
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/Products/42680679_2344349902247506_8511031842294464512_o.jpg">
+                                            href="img/Products/Linea  Shampoo luminescina Haircompany.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
                                 </div>
-                                <h2>Redken shampoo</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ea odio accusamus impedit, nulla error possimus, libero laboriosam dolore unde quidem! Nesciunt obcaecati ipsa suscipit asperiores enim in, explicabo fugit.</p>
+                                <h2>Linea  Shampoo luminescina Haircompany</h2>
+                                <a href="">Leggi la descrizione</a>
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/Products/46423667_2422545037761325_6745800146199511040_o.jpg" alt="">
+                                    <img src="img/Products/Maschera Anticrescpo Haircompany.jpg" alt="">
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/Products/46423667_2422545037761325_6745800146199511040_o.jpg">
+                                            href="img/Products/Maschera Anticrescpo Haircompany.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique sint ipsum quis aspernatur veniam vel porro, voluptatem, qui distinctio laudantium consequatur deserunt nisi maxime. Laudantium recusandae sint modi possimus?</p>
+                                <h2>Maschera Anticrescpo Haircompany</h2>
+                                <a href="">Leggi la descrizione</a>
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/Products/49213091_2510553218960506_5390706091359207424_o.jpg" alt="">
+                                    <img src="img/Products/redken all soft vegan.jpg" alt="">
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/Products/49213091_2510553218960506_5390706091359207424_o.jpg">
+                                            href="img/Products/redken all soft vegan.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla perspiciatis, asperiores ut facere necessitatibus, odio facilis accusamus tempore ex provident autem. Illum iste maxime fugit ullam praesentium sunt impedit hic?</p>
+                                <h2>Redken all soft vegan</h2>
+                                <a href="">Leggi la descrizione</a>
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/Products/49213091_2510553218960506_5390706091359207424_o.jpg" alt="">
+                                    <img src="img/Products/redken color extend vegan.jpg" alt="">
                                     <div class="image_hover">
                                         <a class="popup-image"
-                                            href="img/Products/49213091_2510553218960506_5390706091359207424_o.jpg">
+                                            href="img/Products/redken color extend vegan.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius cum reiciendis magni laboriosam molestiae temporibus ipsa iste ratione tempora at praesentium, itaque necessitatibus totam consequatur aperiam, consectetur quasi molestias eveniet.</p>
+                                <h2>Redken color extend vegan</h2>
+                                <a href="">Leggi la descrizione</a>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
+                                    <img src="img/Products/redken extreme vegan.jpg" alt="">
+                                    <div class="image_hover">
+                                        <a class="popup-image"
+                                            href="img/Products/redken extreme vegan.jpg">
+                                            <i class="ti-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <h2>Redken extreme vegan</h2>
+                                <a href="">Leggi la descrizione</a>
                             </div>
                         </div>
                         <div class="d-inline-block " >
