--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
                                         </a>
                                     </div>
                                 </div>
-                                <h2>Redken extreme vegan</h2>
-                                <a href="">Leggi la descrizione</a>
+                                <h2>Redken extreme vegan <br><a href="">Leggi la descrizione</a></h2>
+                                
                             </div>
                         </div>
                         <div class="d-inline-block " >
