--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
                                         </a>
                                     </div>
                                 </div>
-                                <h2>Redken extreme vegan <br><a href="">Leggi la descrizione</a></h2>
+                                <h2>Redken extreme vegan</h2>
+                                <p href="https://www.google.com">Leggi la descrizione</p>
                                 
                             </div>
                         </div>
