--- a/index.html
+++ b/index.html
@@ -519,8 +519,7 @@
                                     </div>
                                 </div>
                                 <h2>Redken extreme vegan</h2>
-                                <p href="https://www.google.com">Leggi la descrizione</p>
-                                
+                                <p  style="font-family: 'Times New Roman', Times, serif;font-size: small;color: #300033;" href="https://www.google.com">Leggi la descrizione</p>
                             </div>
                         </div>
                         <div class="d-inline-block " >
