--- a/index.html
+++ b/index.html
@@ -518,8 +518,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <h2>Redken extreme vegan</h2>
-                                <p  style="font-family: 'Times New Roman', Times, serif;font-size: small;color: #300033;" href="https://www.google.com">Leggi la descrizione</p>
+                                <h2 href="https://www.google.com/">Redken extreme vegan</h2>
                             </div>
                         </div>
                         <div class="d-inline-block " >
