--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <h2 href="https://www.google.com/">Redken extreme vegan</h2>
+                                <a href="https://www.google.com/">Redken extreme vegan</a>
                             </div>
                         </div>
                         <div class="d-inline-block " >
