--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <p><a style="color: #300033;" href="https://www.google.com/">Redken extreme vegan</a></p>
+                                <p><a style="display:block;color: #300033;" href="https://www.google.com/">Redken extreme vegan</a></p>
                             </div>
                         </div>
                         <div class="d-inline-block " >
