quickfix paragraph style

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/waves.jpg" alt="">
-                                    <p>Waves</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Waves</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/waves.jpg">
                                             <i class="ti-plus"></i>
@@ -413,7 +413,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/waves2.jpg" alt="">
-                                    <p>Waves</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Waves</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/waves2.jpg">
                                             <i class="ti-plus"></i>
