html structure refactoring

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="col-xl-3 col-lg-3">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="max-width: 100%;" src="img/banner/satisfactionRip-removebg-preview.png" alt="">
+                                    <img style="max-width: 100%;" src="img/banner/satisfactionRip-removebg-preview.png" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6">
                     <div class="about_thumb">
-                        <img src="img/banner/Banner_Service_dom.jpg" alt="">
+                        <img src="img/banner/Banner_Service_dom.jpg" alt="HairDesigner taglia i capelli">
                             <div class="opening_hour text-center">
                                 <i class="flaticon-clock"></i>
                                 <h3>Orario <br>d'apertura</h3>
@@ -165,7 +165,7 @@
                                             <span>Taglio personalizzato</span>
                                         </div>
                                     </div>
-                            </section>
+                            <!-- </section> -->
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display ;">Dopo una breve consultazione con la cliente , segue una consulenza da parte del parrucchiere  , si procede al taglio tenendo in considerazione  gusto personale della cliente , abitudini, obiettivi, stile personale , tipo di lavoro ..$25*</p>
                                     <div class="single_service d-flex justify-content-between align-items-center">
                                         <div class="service_inner d-flex align-items-center">
@@ -228,7 +228,7 @@
                         <div class="gallery_active owl-carousel">
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/acconciatura sposa.jpg" alt="">
+                                    <img src="img/gallery/acconciatura sposa.jpg" alt="Acconciatura sposa">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Acconciatura sposa</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -240,7 +240,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/light blonde.jpg" alt="">
+                                    <img src="img/gallery/light blonde.jpg" alt="Light blonde">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Light Blonde</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/light blonde.jpg">
@@ -251,7 +251,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/velature bionde.jpg" alt="">
+                                    <img src="img/gallery/velature bionde.jpg" alt="Velature bionde">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Velature bionde</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/velature bionde.jpg">
@@ -262,7 +262,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/biondo caldo.jpg" alt="">
+                                    <img src="img/gallery/biondo caldo.jpg" alt="Biondo caldo">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Biondo caldo</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -274,7 +274,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/pastello.jpg" alt="">
+                                    <img src="img/gallery/pastello.jpg" alt="Pastello">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Pastello</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -286,7 +286,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/platino.jpg" alt="">
+                                <img src="img/gallery/platino.jpg" alt="Platino">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Platino</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -298,7 +298,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/cioccolato.jpg" alt="">
+                                    <img src="img/gallery/cioccolato.jpg" alt="Cioccolato">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Cioccolato</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -310,7 +310,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/gianduia.jpg" alt="">
+                                    <img src="img/gallery/gianduia.jpg" alt="Gianduia">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Gianduia</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
@@ -322,7 +322,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/red.jpg" alt="">
+                                    <img src="img/gallery/red.jpg" alt="Red">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Red</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/red.jpg">
@@ -333,7 +333,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/bob.jpg" alt="">
+                                    <img src="img/gallery/bob.jpg" alt="Bob">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Bob</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/bob.jpg">
@@ -344,7 +344,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/contrasti.jpg" alt="">
+                                    <img src="img/gallery/contrasti.jpg" alt="Contrasti">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Contrasti</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/contrasti.jpg">
@@ -355,7 +355,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/sfumando.jpg" alt="">
+                                    <img src="img/gallery/sfumando.jpg" alt="Sfumando">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Sfumando</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/sfumando.jpg">
@@ -366,7 +366,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/stravaganze.jpg" alt="">
+                                    <img src="img/gallery/stravaganze.jpg" alt="Stravaganze">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Stravaganze</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/stravaganze.jpg">
@@ -377,7 +377,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/stravaganze2.jpg" alt="">
+                                    <img src="img/gallery/stravaganze2.jpg" alt="Stravaganze">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Stravaganze</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/stravaganze2.jpg">
@@ -388,7 +388,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/semi raccolto.jpg" alt="">
+                                    <img src="img/gallery/semi raccolto.jpg" alt="Semi raccolto">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Semi raccolto</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/semi raccolto.jpg">
@@ -399,7 +399,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/waves.jpg" alt="">
+                                    <img src="img/gallery/waves.jpg" alt="Waves">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Waves</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/waves.jpg">
@@ -410,7 +410,7 @@
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/waves2.jpg" alt="">
+                                    <img src="img/gallery/waves2.jpg" alt="Waves">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Waves</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/waves2.jpg">
